Bug 55526 - RTF import loses hairline borders (\brdrhair)
Summary: RTF import loses hairline borders (\brdrhair)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: Other All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:3.7.0 target:3.6.3
Keywords: filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2012-10-02 07:55 UTC by Cor Nouws
Modified: 2015-12-17 12:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
original rtf document (54.28 KB, text/rtf)
2012-10-02 07:55 UTC, Cor Nouws
Details
as opened in 3.4.6 (36.38 KB, application/pdf)
2012-10-02 07:56 UTC, Cor Nouws
Details
as opened in 3.5.7 / 3.6.2 (34.93 KB, application/pdf)
2012-10-02 07:56 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-10-02 07:55:40 UTC
Created attachment 67971 [details]
original rtf document

See attachment Letter_Voorbeeld_Clean.rtf

Open in 3.4: Letter_Voorbeeld_Clean_346.pdf
Open in 3.5: Letter_Voorbeeld_Clean_357.pdf

(Names of tables as openend in 3.3.4/3.4.6!)
Table 4 :  borders around two cells only, are lost
Table 5 :  border lost
Table 7 :  all borders lost
Table 8/9 :  all borders lost
Comment 1 Cor Nouws 2012-10-02 07:56:15 UTC
Created attachment 67972 [details]
as opened in 3.4.6
Comment 2 Cor Nouws 2012-10-02 07:56:34 UTC
Created attachment 67973 [details]
as opened in 3.5.7 /  3.6.2
Comment 3 Cor Nouws 2012-10-02 07:57:26 UTC
Was ok in 3.4.x and 3.3.x
Comment 4 Roman Eisele 2012-10-02 10:10:37 UTC
Comment on attachment 67973 [details]
as opened in 3.5.7 /  3.6.2

(Fixed the MIME types.)
Comment 5 Not Assigned 2012-10-09 16:10:11 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=59ab112fe93cbf4e2b052f4e8bafbdb4e6738bef

fdo#55526: fix import of RTF \brdrhair:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2012-10-09 16:28:30 UTC
problem is that the borders in bugdoc have type \brdrhair
(hairline) and no width; the import needs to special case
hairline borders and map them to non-zero-width border.
Comment 7 Cor Nouws 2012-10-09 20:34:40 UTC
(In reply to comment #6)
> problem is that the borders in bugdoc have type \brdrhair
> (hairline) and no width; the import needs to special case
> hairline borders and map them to non-zero-width border.

Thanks for fix & further explanation!
C/Would this be an candidate for 3.6.x too?
Comment 8 Not Assigned 2012-10-10 10:49:51 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b747a8f75f97f6e83297073e61acd95c7a9cc3d6&g=libreoffice-3-6

fdo#55526: fix import of RTF \brdrhair:


It will be available in LibreOffice 3.6.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Robinson Tryon (qubit) 2015-12-17 12:08:05 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]