fdo#55526: fix import of RTF \brdrhair:

This is a hairline border that should be mapped to a non-zero width
border given that LO doesn't have hairline borders as such.

Change-Id: I4a2d2f983ac8e016b2ddb6b38435f5562e545c72